--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
 
+	<!--Import Google Icon Font-->
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<!--Import materialize.css-->
+	<link type="text/css" rel="stylesheet" href="css/materialize.min.css" media="screen,projection" />
+
+	<!--Let browser know website is optimized for mobile-->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 	<!--
 	//////////////////////////////////////////////////////
 
@@ -74,41 +82,42 @@
 </head>
 
 <body>
-
+	<!--MATERIAL-->
+	<script type="text/javascript" src="js/materialize.min.js"></script>
 	<div class="main-wrapper">
 
-	<!-- Social Icons -->
-	<div class="hidden-sm hidden-xs">
+		<!-- Social Icons -->
+		<div class="hidden-sm hidden-xs">
 
 
-		<ul id="social_side_links">
-			<li><a style="background-color: #3c5a96;" href="https://facebook.com" target="_blank"><img src="images/facebook-icon.png" alt="" /></a></li>
-			<li><a style="background-color: #1dadeb;" href="https://twitter.com" target="_blank"><img src="images/twitter-icon.png" alt="" /></a></li>
-			<li><a style="background-color: #1178b3;" href="https://linkedin.com" target="_blank"><img src="images/linkedin-icon.png" alt="" /></a></li>
-			<li><a style="background-color: #8a3ab9;" href="https://linkedin.com" target="_blank"><img src="images/instagram-icon.png" alt="" /></a></li>
-		</ul>
-	</div>
-
-
-
-	<div class="section header-principal" data-section="home">
+			<ul id="social_side_links">
+				<li><a style="background-color: #3c5a96;" href="https://facebook.com" target="_blank"><img src="images/facebook-icon.png" alt="" /></a></li>
+				<li><a style="background-color: #1dadeb;" href="https://twitter.com" target="_blank"><img src="images/twitter-icon.png" alt="" /></a></li>
+				<li><a style="background-color: #1178b3;" href="https://linkedin.com" target="_blank"><img src="images/linkedin-icon.png" alt="" /></a></li>
+				<li><a style="background-color: #8a3ab9;" href="https://linkedin.com" target="_blank"><img src="images/instagram-icon.png" alt="" /></a></li>
+			</ul>
+		</div>
 
 
 
-
-		<div class="container" style="z-index: 10 !important;position: relative;">
-
-
-			<div class="row">
+		<div class="section header-principal" data-section="home">
 
 
 
-				<!--<h1 class="to-animate">Cali Sabe bien</h1>-->
-				<div class="col-md-12">
-					<div class="centrar-imagen">
-						<img src="images/logo2.svg" id="logo2">
+
+			<div class="container" style="z-index: 10 !important;position: relative;">
+
+
+				<div class="row">
+
+
+
+					<!--<h1 class="to-animate">Cali Sabe bien</h1>-->
+					<div class="col-md-12">
+						<div class="centrar-imagen">
+							<img src="images/logo2.svg" id="logo2">
+						</div>
 					</div>
-				</div>
 
 
 
@@ -119,22 +128,22 @@
 
 
 
-				<div class="col-md-12">
-					<p id="textovideo">Conoce aquí las tradiciones culinarias, las recetas que reflejan la cultura vallecaucana y que denotan por qué Cali sabe bien. Déjate tentar por los sabores de la Navidad y de la gastronomía que envuelven a la Sucursal del cielo ¡Buen provecho!.</p>
-				</div>
+					<div class="col-md-12">
+						<p id="textovideo">Conoce aquí las tradiciones culinarias, las recetas que reflejan la cultura vallecaucana y que denotan por qué Cali sabe bien. Déjate tentar por los sabores de la Navidad y de la gastronomía que envuelven a la Sucursal del cielo ¡Buen provecho!.</p>
+					</div>
 
-				<div class="col-md-12 hidden-md hidden-lg" style="text-align: center;">
-					<img src="images/scroll2.gif" style="width: 60px;">
-				</div>
-
-
+					<div class="col-md-12 hidden-md hidden-lg" style="text-align: center;">
+						<img src="images/scroll2.gif" style="width: 60px;">
+					</div>
 
 
 
 
 
 
-				<!--<div class="col-12 col-md-12">
+
+
+					<!--<div class="col-12 col-md-12">
 						<div class="embed-responsive embed-responsive-16by9">
 							<div id="kaltura_player_cumpleCali" itemprop="video" externalInterfaceDisabled=false itemscope itemtype="http://schema.org/VideoObject" class="embed-responsive-item"></div>
 							<script src="http://cloudvideo.cdn.net.co/p/102/sp/10200/embedIframeJs/uiconf_id/23448791/partner_id/102"></script>
@@ -157,47 +166,47 @@
 							</script>
 						</div>
 					</div>-->
+				</div>
+
 			</div>
-
+			<div class="fade-header">
+			</div>
 		</div>
-		<div class="fade-header">
-		</div>
-	</div>
 
 
 
 
 
 
-	<div class="js-sticky">
-		<div class="fh5co-main-nav">
+		<div class="js-sticky">
+			<div class="fh5co-main-nav">
 
 
 
 
-			<!--<div class="fh5co-logo">
+				<!--<div class="fh5co-logo">
 					<img src="images/logo3.svg">
 				</div>-->
-			<!--<div class="fh5co-logo">
+				<!--<div class="fh5co-logo">
 					<a href="index.html">Cali Sabe Bien</a>
 				</div>-->
-			<div class="row">
+				<div class="row">
 
 
-				<div class="fh5co-menu-2">
+					<div class="fh5co-menu-2">
 
 
-					<a href="#" data-nav-section="home">Home</a>
-					<a href="#" data-nav-section="danncarton">Hotel Dann</a>
-					<a href="#" data-nav-section="events">Cervalle</a>
-					<a href="#" data-nav-section="menu">Los Reblujos de Pati</a>
-					<a href="#" data-nav-section="reservation">Trucos de cocina para Navidad</a>
-					<a href="#" data-nav-section="features">Recetas tradicionales</a>
-					<a href="#" data-nav-section="home" class="logo-link-menu"><img src="images/logo3.svg" id="logomenu" style="padding: 7px;"></a>
+						<a href="#" data-nav-section="home">Home</a>
+						<a href="#" data-nav-section="danncarton">Hotel Dann</a>
+						<a href="#" data-nav-section="events">Cervalle</a>
+						<a href="#" data-nav-section="menu">Los Reblujos de Pati</a>
+						<a href="#" data-nav-section="reservation">Trucos de cocina para Navidad</a>
+						<a href="#" data-nav-section="features">Recetas tradicionales</a>
+						<a href="#" data-nav-section="home" class="logo-link-menu"><img src="images/logo3.svg" id="logomenu" style="padding: 7px;"></a>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 
 
 
@@ -206,110 +215,78 @@
 
 
 
-	<div id="fh5co-contact"  data-nav-section="danncarton">
-		<div class="container">
-			<div class="row text-center fh5co-heading row-padded">
+		<div id="fh5co-contact" data-nav-section="danncarton">
+			<div class="container">
+				<div class="row text-center fh5co-heading row-padded">
+					<div class="row">
+						<div class="col-md-12">
 
+							<h2 class="heading to-animate" style="color:#004c6c;">Trucos de cocina para Navidad</h2>
+							<p class="sub-heading to-animate">Existen varios tips y consejos que puedes poner en práctica en estas fechas en las que todos queremos quedar como el anfitrión perfecto y dejar a los invitados encantados. Toma nota de nuestros 8 consejos para esta Navidad.</p>
+						</div>
+					</div>
 
-				<div class="col-md-12">
-					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="//www.youtube.com/embed/ePbKGoIGAXY" allowfullscreen=""></iframe>
+				<div class="row">
+					<div class="col-md-12">
+						<div class="embed-responsive embed-responsive-16by9">
+							<iframe width="460" height="215" src="https://www.youtube.com/embed/elmet3x4AeI" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
 
+						</div>
 					</div>
 				</div>
 
-				<div class="col-md-12">
-					
-					<h2 class="heading to-animate" style="color:#004c6c;">Trucos de cocina para Navidad</h2>
-					<p class="sub-heading to-animate">Existen varios tips y consejos que puedes poner en práctica en estas fechas en las que todos queremos quedar como el anfitrión perfecto y dejar a los invitados encantados. Toma nota de nuestros 8 consejos para esta Navidad.</p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-md-6 to-animate-2">
-					<h3 style="text-align:center">1. No te compliques.</h3>
+				<div class="row">
+					<div class="col-md-4">
 
+						<div class="card">
+							<div class="card-image">
+								<img src="images/3.jpg">
+								<span class="card-title">Card Title</span>
+							</div>
+							<div class="card-content">
+								<p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+							</div>
+							<div class="card-action">
+								<a href="#">This is a link</a>
+							</div>
+						</div>
+					</div>
 
+					<div class="col-md-4">
 
-					<img src="images/tips/1 tip.jpg" id="imagentip" class="img-responsive">
-					<p class="textotip">
+						<div class="card">
+							<div class="card-image">
+								<img src="images/3.jpg">
+								<span class="card-title">Card Title</span>
+							</div>
+							<div class="card-content">
+								<p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+							</div>
+							<div class="card-action">
+								<a href="#">This is a link</a>
+							</div>
+						</div>
+					</div>
 
-						Si organizaste un evento en tu casa lo ideal es que busques recetas muy fáciles de hacer. Por ejemplo, una especie de fondue original y deliciosa u optar por las carnes frías.</p>
-				</div>
-				<div class="col-md-6 to-animate-2">
-					<h3 style="text-align:center">2. Varía.</h3>
+					<div class="col-md-4">
 
+						<div class="card">
+							<div class="card-image">
+								<img src="images/3.jpg">
+								<span class="card-title">Card Title</span>
+							</div>
+							<div class="card-content">
+								<p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
+							</div>
+							<div class="card-action">
+								<a href="#">This is a link</a>
+							</div>
+						</div>
+					</div>
 
-
-					<img src="images/tips/2 tip.jpg" id="imagentip" class="img-responsive">
-					<p class="textotip">
-
-						Una mesa de pasa bocas es una muy buena opción para sorprender y es fácil de realizar. Solo pon a volar tu imaginación para prepararlos.</p>
-				</div>
-				<div class="col-md-6 to-animate-2">
-					<h3 style="text-align:center">3. Tip, la clave del sabor.</h3>
-
-
-
-					<img src="images/tips/3 tip.jpg" id="imagentip" class="img-responsive">
-					<p class="textotip">
-
-						Navidad es la época perfecta para hacer combinaciones distintas. Ensaya y prepara deliciosas salsas para acompañar tus comidas o entradas.</p>
-				</div>
-				<div class="col-md-6 to-animate-2">
-					<h3 style="text-align:center">4. No des esto en Navidad.</h3>
-
-
-
-					<img src="images/tips/4 tip.jpg" id="imagentip" class="img-responsive">
-					<p class="textotip">
-
-						La época se presta para innovar. No caigas en el facilismo de dar comidas rápidas que puedes conseguir en cualquier día del año.</p>
-				</div>
-				<div class="col-md-6 to-animate-2">
-					<h3 style="text-align:center">5.	Para los niños.</h3>
-
-
-
-					<img src="images/tips/5 tip.jpg" id="imagentip" class="img-responsive">
-					<p class="textotip">
-
-						Unos palitos de pollo, una brochetas de cerco con verduras asadas o queso mozzarella apanado les encantará. Dales cosas sencillas pero que sepas que les encantará.</p>
-				</div>
-				<div class="col-md-6 to-animate-2">
-					<h3 style="text-align:center">6.	Para el postre.</h3>
-
-
-
-					<img src="images/tips/6 tip.jpg" id="imagentip" class="img-responsive">
-					<p class="textotip">
-
-						Una natilla, un flan o un pudín son ideas magníficas para acompañar un encuentro navideño. También puedes optar por las galletas horneadas.</p>
-				</div>
-				<div class="col-md-6 to-animate-2">
-					<h3 style="text-align:center">7.	Cócteles, fáciles y ligeros.</h3>
-
-
-
-					<img src="images/tips/7 tip.jpg" id="imagentip" class="img-responsive">
-					<p class="textotip">
-
-						El gin tonic está de moda. Puedes prepararlo con sabores distintos: con lima y menta, con naranja y vainilla o con canela y café. ¡Para todos los gustos!</p>
-				</div>
-				<div class="col-md-6 to-animate-2">
-					<h3 style="text-align:center">8.	Cuida los detalles de la mesa.</h3>
-
-
-
-					<img src="images/tips/8 tip.jpg" id="imagentip" class="img-responsive">
-					<p class="textotip">
-
-						Aunque la comida es la protagonista, el cómo lo presentas también es importante. Compra unos bastoncillos de caramelo y mételos en un par de tarros vacíos que decoren el centro de la mesa. También puedes utilizar velas rojas, y eso sí saca tu vajilla
-						nueva.
-					</p>
 				</div>
 
 			</div>
-
 		</div>
 	</div>
 
