responsive and cards

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 	<link rel="shortcut icon" href="http://www.elpais.com.co/elpais/sites/default/files/elpais_favicon.ico" type="image/x-icon" />
 
 	<link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,400italic,700italic|Merriweather:300,400italic,300italic,400,700italic' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900" rel="stylesheet">
 
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -132,8 +133,8 @@
 						<p id="textovideo">Conoce aquí las tradiciones culinarias, las recetas que reflejan la cultura vallecaucana y que denotan por qué Cali sabe bien. Déjate tentar por los sabores de la Navidad y de la gastronomía que envuelven a la Sucursal del cielo ¡Buen provecho!.</p>
 					</div>
 
-					<div class="col-md-12 hidden-md hidden-lg" style="text-align: center;">
-						<img src="images/scroll2.gif" style="width: 60px;">
+					<div class="col-md-12 visible-xs" style="text-align: center;">
+						<img id="scroll" src="images/scroll2.gif">
 					</div>
 
 
@@ -217,13 +218,14 @@
 
 		<div id="fh5co-contact" data-nav-section="danncarton">
 			<div class="container">
-				<div class="row text-center fh5co-heading row-padded">
-					<div class="row">
-						<div class="col-md-12">
 
-							<h2 class="heading to-animate" style="color:#004c6c;">Trucos de cocina para Navidad</h2>
-							<p class="sub-heading to-animate">Existen varios tips y consejos que puedes poner en práctica en estas fechas en las que todos queremos quedar como el anfitrión perfecto y dejar a los invitados encantados. Toma nota de nuestros 8 consejos para esta Navidad.</p>
-						</div>
+				<div class="row">
+					<div class="col-md-12 headerseccion">
+						<img src="images/vino.png" class="iconoseccion" class="img-responsive">
+						<h2 class="tituloseccion tituloseccion-sombra1">Trucos de cocina para Navidad</h2>
+					</div>
+					<div class="col-md-12">
+						<p class="parrafoseccion parrafoseccioncolor1">Existen varios tips y consejos que puedes poner en práctica en estas fechas en las que todos queremos quedar como el anfitrión perfecto y dejar a los invitados encantados. Toma nota de nuestros 8 consejos para esta Navidad.</p>
 					</div>
 
 					<div class="row">
@@ -239,9 +241,9 @@
 						<div class="col-md-4">
 
 							<div class="card">
-								<div class="card-image">
+								<div class="card-image"><div class="fade-header"></div>
 									<img src="images/3.jpg">
-									<span class="card-title">Card Title</span>
+									<span class="card-title cards-title-shadow">Card Title</span>
 								</div>
 								<div class="card-content">
 									<p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
@@ -255,9 +257,9 @@
 						<div class="col-md-4">
 
 							<div class="card">
-								<div class="card-image">
+								<div class="card-image"><div class="fade-header"></div>
 									<img src="images/3.jpg">
-									<span class="card-title">Card Title</span>
+									<span class="card-title cards-title-shadow">Card Title</span>
 								</div>
 								<div class="card-content">
 									<p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
@@ -271,9 +273,9 @@
 						<div class="col-md-4">
 
 							<div class="card">
-								<div class="card-image">
+								<div class="card-image"><div class="fade-header"></div>
 									<img src="images/3.jpg">
-									<span class="card-title">Card Title</span>
+									<span class="card-title cards-title-shadow">Card Title</span>
 								</div>
 								<div class="card-content">
 									<p>I am a very simple card. I am good at containing small bits of information. I am convenient because I require little markup to use effectively.</p>
@@ -295,143 +297,173 @@
 			<div class="container">
 
 				<div class="row">
-
-
-					<div class="col-md-12" id="titulorecetasseccion">
-
+					<div class="col-md-12 headerseccion">
 						<img src="images/recetas.png" class="iconoseccion" class="img-responsive">
-
-
-						<h2 style="color:#008ecf;" id="textorecetas">Recetas tradicionales</h2>
-						<p id="parraforecetas" style="color:#ffffff;">El ya conocido plato navideño no puede faltar por esta época. Conoce aquí la receta de cada uno de los alimentos que lo compone y haz tú mismo que esta dulce tradición siga vigente en tu hogar.</p>
+						<h2 class="tituloseccion tituloseccion-sombra2">Recetas tradicionales</h2>
 					</div>
-
-					<div class="col-md-6">
-						<div class="card">
-							<div class="card-image">
-								<img src="images/recetas/manjar.jpg">
-								<span class="card-title">Manjar blanco</span>
-							</div>
-							<div class="card-content">
-								<blockquote>
-									<p><b>Ingredientes:</b></p>
-									<p>15 botellas de leche</p>
-									<p>5 lb. de azúcar</p>
-									<p>2 cucharadas de arroz</p>
-									<p>Pasas o coco rayado o piña calada (opcionales para decorar)</p>
-									<p>Mates</p>
-								</blockquote>
-
-								<p><strong>Preparación: </strong>Remojar el arroz en agua toda la noche. Molerlo. Agregarle un chorrito de leche y licuar. Colar con paño varias veces. Agregarle la leche y luego mezclar. Añadir el azúcar y revolver. Poner al fuego y seguir revolviendo
-									sin parar por 4 horas. Sirva en mates.</p>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-md-6">
-						<div class="card">
-							<div class="card-image">
-								<img src="images/recetas/hojaldra.jpg">
-								<span class="card-title">Hojaldres</span>
-							</div>
-							<div class="card-content">
-								<blockquote>
-									<p><b>Ingredientes:</b></p>
-									<p>½ kg de harina de trigo cernida</p>
-									<p>4 huevos batidos</p>
-									<p>1 taza de jugo de naranja</p>
-									<p>125 gramos de mantequilla o margarina</p>
-									<p>Sal al gusto</p>
-								</blockquote>
-								<p><strong>Preparación: </strong>Remojar la harina con el jugo de naranja y mezclar con el resto de ingredientes. Golpear la masa fuertemente contra la tabla Dejarla reposar un poco y extenderla lo más delgada posible. Cortar porciones levantarlas
-									y poner a freír en aceite no muy caliente hasta que doren.</p>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-md-6">
-						<div class="card">
-							<div class="card-image">
-								<img src="images/recetas/natilla.jpg">
-								<span class="card-title">Natilla de maíz</span>
-							</div>
-							<div class="card-content">
-								<blockquote>
-									<p><b>Ingredientes (Para 10 personas):</b></p>
-									<p>1 botella de leche</p>
-									<p>¼ de panela</p>
-									<p>2 astillas de canela</p>
-									<p>4 clavos de olor</p>
-									<p>4 cucharadas de fécula de maíz disuelta en un poco de leche</p>
-									<p>2 cucharadas de mantequilla</p>
-									<p>Uvas pasas o coco si se quiere</p>
-									<p>Canela en polvo</p>
-									<p>Una pizquita de sal.</p>
-								</blockquote>
-
-								<p><strong>Preparación: </strong>Poner la leche, la panela, la canela, los clavos y la sal a cocinar a fuego lento, revolviendo todo al tiempo con una cuchara de palo. Cuando empiece a hervir, agregar la fécula de maíz disuelta ya en un poco de leche
-									y seguir revolviendo. Luego añadir la mantequilla, dejar a fuego lento un poco más y bajarla. Verter en un molde refractario y dejarla enfriar y cuajar. Espolvorear un poco de canela en polvo y adornar con uvas pasas.</p>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-md-6">
-						<div class="card">
-							<div class="card-image">
-								<img src="images/recetas/desamargado.jpg">
-								<span class="card-title">Desamargado</span>
-							</div>
-							<div class="card-content">
-								<blockquote>
-									<p><b>Ingredientes:</b></p>
-									<p>Cáscaras de limón</p>
-									<p>Papaya verde</p>
-									<p>Papayuela</p>
-									<p>Toronja de cáscara roja</p>
-									<p>Cabello de ángel (es lo que tiene en su interior la victoria)</p>
-									<p>Brevas</p>
-									<p>Pimentón rojo</p>
-								</blockquote>
-
-								<p><strong>Preparación: </strong>Se cocinan todos estos elementos hasta que estén tiernos, se dejan enfriar y al día siguiente se les cambia el agua. Esta misma operación se repite durante dos días más. Luego se adiciona la azúcar necesaria, de acuerdo
-									a la cantidad de almíbar que desee preparar. En cuanto al agua, preferiblemente ésta debe cubrir las frutas por completo. Se pone a cocinar hasta que empiece a dar el punto de almíbar. No lo revuelva, sólo controle la temperatura para que no
-									se arrebate. Deje enfriar sin tapar la olla, solamente con un paño encima.
-								</p>
-							</div>
-						</div>
-					</div>
-
 					<div class="col-md-12">
-						<div class="card">
-							<div class="card-image">
-								<img src="images/recetas/bunuelos.jpg">
-								<span class="card-title">Buñuelos</span>
+						<p class="parrafoseccion parrafoseccioncolor2">El ya conocido plato navideño no puede faltar por esta época. Conoce aquí la receta de cada uno de los alimentos que lo compone y haz tú mismo que esta dulce tradición siga vigente en tu hogar.</p>
+					</div>
+
+
+					<div class="row">
+
+
+						<div class="col-md-4">
+							<div class="card">
+								<div class="card-image"><div class="fade-header"></div>
+									<img src="images/recetas/manjar.jpg">
+									<span class="card-title cards-title-shadow">Manjar blanco</span>
+								</div>
+								<div class="card-content">
+									<blockquote>
+										<p><b>Ingredientes:</b></p>
+										<p>15 botellas de leche</p>
+										<p>5 lb. de azúcar</p>
+										<p>2 cucharadas de arroz</p>
+										<p>Pasas o coco rayado o piña calada (opcionales para decorar)</p>
+										<p>Mates</p>
+									</blockquote>
+
+									<div id="rt-receta1" class="collapse cards-collapsed">
+										<p><strong>Preparación: </strong>Remojar el arroz en agua toda la noche. Molerlo. Agregarle un chorrito de leche y licuar. Colar con paño varias veces. Agregarle la leche y luego mezclar. Añadir el azúcar y revolver. Poner al fuego y seguir revolviendo
+											sin parar por 4 horas. Sirva en mates.</p>
+									</div>
+
+									<div class="cards-btn-center">
+										<a data-toggle="collapse" data-target="#rt-receta1" class="waves-effect waves-light btn">Preparación</a>
+									</div>
+
+								</div>
 							</div>
-							<div class="card-content">
-								<blockquote>
+						</div>
 
-									<p><b>Ingredientes:</b></p>
-									<p>200 Gramos de queso costeño (queso fresco o queso feta)</p>
-									<p>120 Gramos de Fécula de maíz (maicena)</p>
-									<p>60 Gramos de Almidón de yuca</p>
-									<p>50 Gramos de Azúcar (¼ Taza)</p>
-									<p>2 Unidades de Huevos</p>
-									<p>5 Gramos de Sal</p>
-									<p>10 Gramos de Mantequilla</p>
-									<p>2 Gramos de Polvo de hornear</p>
-									<p>1 Litro de Aceite para freír</p>
-
-								</blockquote>
-								<p><strong>Preparación: </strong>Mezcla en un recipiente todos los ingredientes secos, es decir, el queso rallado, el almidón de yuca, la fécula de maíz, el azúcar, la sal y el polvo de hornear.Agrega los huevos y la mantequilla blanca, luego mezcla
-									todos los ingredientes hasta obtener una masa homogénea y suave. Si la masa queda un poco seca se puede agregar leche hasta obtener la consistencia deseada.Arma bolas del mismo tamaño y pon a freír los buñuelos en aceite a 165°C durante 20 minutos,
-									o hasta que veas que flotan y están dorados. Retira los buñuelos y ponlos sobre un papel absorbente y listo.</p>
+						<div class="col-md-4">
+							<div class="card">
+								<div class="card-image"><div class="fade-header"></div>
+									<img src="images/recetas/hojaldra.jpg">
+									<span class="card-title cards-title-shadow">Hojaldres</span>
+								</div>
+								<div class="card-content">
+									<blockquote>
+										<p><b>Ingredientes:</b></p>
+										<p>½ kg de harina de trigo cernida</p>
+										<p>4 huevos batidos</p>
+										<p>1 taza de jugo de naranja</p>
+										<p>125 gramos de mantequilla o margarina</p>
+										<p>Sal al gusto</p>
+									</blockquote>
+									<div id="rt-receta2" class="collapse cards-collapsed">
+										<p><strong>Preparación: </strong>Remojar la harina con el jugo de naranja y mezclar con el resto de ingredientes. Golpear la masa fuertemente contra la tabla Dejarla reposar un poco y extenderla lo más delgada posible. Cortar porciones levantarlas
+											y poner a freír en aceite no muy caliente hasta que doren.</p>
+									</div>
+									<div class="cards-btn-center">
+										<a data-toggle="collapse" data-target="#rt-receta2" class="waves-effect waves-light btn">Preparación</a>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="card">
+								<div class="card-image"><div class="fade-header"></div>
+									<img src="images/recetas/desamargado.jpg">
+									<span class="card-title cards-title-shadow">Desamargado</span>
+								</div>
+								<div class="card-content">
+									<blockquote>
+										<p><b>Ingredientes:</b></p>
+										<p>Cáscaras de limón</p>
+										<p>Papaya verde</p>
+										<p>Papayuela</p>
+										<p>Toronja de cáscara roja</p>
+										<p>Cabello de ángel</p>
+										<p>Brevas</p>
+									</blockquote>
+									<div id="rt-receta3" class="collapse cards-collapsed">
+										<p><strong>Preparación: </strong>Se cocinan todos estos elementos hasta que estén tiernos, se dejan enfriar y al día siguiente se les cambia el agua. Esta misma operación se repite durante dos días más. Luego se adiciona la azúcar necesaria, de
+											acuerdo a la cantidad de almíbar que desee preparar. En cuanto al agua, preferiblemente ésta debe cubrir las frutas por completo. Se pone a cocinar hasta que empiece a dar el punto de almíbar. No lo revuelva, sólo controle la temperatura para
+											que no se arrebate. Deje enfriar sin tapar la olla, solamente con un paño encima.
+										</p>
+									</div>
+									<div class="cards-btn-center">
+										<a data-toggle="collapse" data-target="#rt-receta3" class="waves-effect waves-light btn">Preparación</a>
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
 
 
+					<div class="row">
 
 
+						<div class="col-md-4">
+							<div class="card">
+								<div class="card-image"><div class="fade-header"></div>
+									<img src="images/recetas/natilla.jpg">
+									<span class="card-title cards-title-shadow">Natilla de maíz</span>
+								</div>
+								<div class="card-content">
+									<blockquote>
+										<p><b>Ingredientes (Para 10 personas):</b></p>
+										<p>1 botella de leche</p>
+										<p>¼ de panela</p>
+										<p>2 astillas de canela</p>
+										<p>4 clavos de olor</p>
+										<p>4 cucharadas de fécula de maíz disuelta en un poco de leche</p>
+										<p>2 cucharadas de mantequilla</p>
+										<p>Uvas pasas o coco si se quiere</p>
+										<p>Canela en polvo</p>
+										<p>Una pizquita de sal.</p>
+									</blockquote>
+
+									<div id="rt-receta4" class="collapse cards-collapsed">
+										<p><strong>Preparación: </strong>Poner la leche, la panela, la canela, los clavos y la sal a cocinar a fuego lento, revolviendo todo al tiempo con una cuchara de palo. Cuando empiece a hervir, agregar la fécula de maíz disuelta ya en un poco de
+											leche y seguir revolviendo. Luego añadir la mantequilla, dejar a fuego lento un poco más y bajarla. Verter en un molde refractario y dejarla enfriar y cuajar. Espolvorear un poco de canela en polvo y adornar con uvas pasas.</p>
+									</div>
+									<div class="cards-btn-center">
+										<a data-toggle="collapse" data-target="#rt-receta4" class="waves-effect waves-light btn">Preparación</a>
+									</div>
+
+								</div>
+							</div>
+						</div>
+
+						<div class="col-md-4">
+							<div class="card">
+								<div class="card-image"><div class="fade-header"></div>
+									<img src="images/recetas/bunuelos.jpg">
+									<span class="card-title cards-title-shadow">Buñuelos</span>
+								</div>
+								<div class="card-content">
+									<blockquote>
+
+										<p><b>Ingredientes:</b></p>
+										<p>200 Gramos de queso costeño (queso fresco o queso feta)</p>
+										<p>120 Gramos de Fécula de maíz (maicena)</p>
+										<p>60 Gramos de Almidón de yuca</p>
+										<p>50 Gramos de Azúcar (¼ Taza)</p>
+										<p>2 Unidades de Huevos</p>
+										<p>5 Gramos de Sal</p>
+										<p>10 Gramos de Mantequilla</p>
+										<p>2 Gramos de Polvo de hornear</p>
+										<p>1 Litro de Aceite para freír</p>
+
+									</blockquote>
+
+
+									<div id="rt-receta5" class="collapse cards-collapsed">
+										<p><strong>Preparación: </strong>Mezcla en un recipiente todos los ingredientes secos, es decir, el queso rallado, el almidón de yuca, la fécula de maíz, el azúcar, la sal y el polvo de hornear.Agrega los huevos y la mantequilla blanca, luego mezcla
+											todos los ingredientes hasta obtener una masa homogénea y suave. Si la masa queda un poco seca se puede agregar leche hasta obtener la consistencia deseada.Arma bolas del mismo tamaño y pon a freír los buñuelos en aceite a 165°C durante 20
+											minutos, o hasta que veas que flotan y están dorados. Retira los buñuelos y ponlos sobre un papel absorbente y listo.</p>
+									</div>
+									<div class="cards-btn-center">
+										<a data-toggle="collapse" data-target="#rt-receta5" class="waves-effect waves-light btn">Preparación</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 
 
 				</div>
